--- a/useState-hook/src/App.css
+++ b/useState-hook/src/App.css
@@ -1,57 +1,76 @@
-/* General body styling */
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-/* Title Styling */
+body {
+  height: 100vh;
+  background-color: #050505;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+
+.content {
+  position: relative;
+  text-align: center;
+  z-index: 1;
+}
+
 h1 {
   text-align: center;
   margin-top: 20px;
   font-size: 2rem;
-  color: #333;
+  color: #2DA4DF;
 }
 
-/* Container for the Toggle View */
 .toggle-view {
-  transition: all 0.3s ease;
-  padding: 20px;
-  border: 1px solid #ccc;
-  width: 200px;  /* Initial width when collapsed */
-  height: 100px; /* Initial height when collapsed */
+  padding: 50px;
   overflow: hidden;
   margin: 50px auto;
   text-align: center;
-  background-color: #fff;
+  background-color: #1a1a1a;
+  border-radius: 15px;
+  box-shadow: 0 0 20px 1px rgba(45, 164, 223, 0.1);
 }
 
-/* Expanded view styles */
 .toggle-view.expanded {
-  width: 400px;
-  height: 300px;
+  border-color: #1a1a1a;
+  box-shadow: 0 0 25px 3px rgba(45, 164, 223, 0.1);
 }
 
-/* Heading style */
 .toggle-view h2 {
   font-size: 1.5rem;
-  color: #333;
+  color: #2DA4DF;
+  margin-bottom: 15px;
 }
 
-/* Button styling */
+.toggle-view p {
+  color: #FFFFFF;
+}
+
 .toggle-view button {
-  padding: 10px 15px;
+  padding: 12px 20px;
   margin-top: 20px;
-  font-size: 1rem;
-  background-color: #007BFF;
-  color: white;
+  font-size: 1.1rem;
+  background-color: #2DA4DF;
+  color: #ffffff;
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.2s ease, box-shadow 0.3s;
 }
 
 .toggle-view button:hover {
-  background-color: #0056b3;
+  transform: scale(1.08);
 }
